--- a/Samples/StreamingDemo/GeneratedSourceFiles/DashboardAPIGenerated/latest/DashboardAPIGenerated.csproj
+++ b/Samples/StreamingDemo/GeneratedSourceFiles/DashboardAPIGenerated/latest/DashboardAPIGenerated.csproj
@@ -1,11 +1,10 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFrameworks>net46;netcoreapp2.0</TargetFrameworks>
-    <Platforms>AnyCPU;x64</Platforms>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="AmbrosiaLibCS" Version="1.0.4" Condition="'$(Configuration)' == 'Release' " />
-    <PackageReference Include="AmbrosiaLibCSDebug" Version="1.0.4" Condition="'$(Configuration)' == 'Debug'" />
+    <PackageReference Include="AmbrosiaLibCS" Version="1.0.5" Condition="'$(Configuration)' == 'Release' " />
+    <PackageReference Include="AmbrosiaLibCSDebug" Version="1.0.5" Condition="'$(Configuration)' == 'Debug'" />
     <PackageReference Include="CRA" Version="2018.11.5.1" />
     <PackageReference Include="Microsoft.CodeAnalysis.Scripting" Version="2.7.0" />
     <PackageReference Include="Microsoft.VisualStudio.Threading" Version="15.8.168" />
