--- a/Samples/StreamingDemo/Dashboard/Dashboard.csproj
+++ b/Samples/StreamingDemo/Dashboard/Dashboard.csproj
@@ -18,7 +18,8 @@
     <DefineConstants>NETCORE</DefineConstants>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="AmbrosiaLibCS" Version="1.0.0" />
+    <PackageReference Include="AmbrosiaLibCS" Version="1.0.5" Condition="'$(Configuration)' == 'Release' " />
+    <PackageReference Include="AmbrosiaLibCSDebug" Version="1.0.5" Condition="'$(Configuration)' == 'Debug'" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\GeneratedSourceFiles\DashboardAPIGenerated\latest\DashboardAPIGenerated.csproj" />
