--- a/AmbrosiaTest/AmbrosiaTest/AmbrosiaTest.csproj
+++ b/AmbrosiaTest/AmbrosiaTest/AmbrosiaTest.csproj
@@ -78,6 +78,7 @@
     <Compile Include="AMB_UnitTest.cs" />
     <Compile Include="MTF_Test.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Shard_UnitTest.cs" />
     <Compile Include="Utilities.cs" />
   </ItemGroup>
   <ItemGroup>
