--- a/Ambrosia.nuspec
+++ b/Ambrosia.nuspec
@@ -2,12 +2,12 @@
 <package >
   <metadata>
     <id>Microsoft.Ambrosia.LibCS</id>
-    <version>1.0.11</version>
+    <version>1.0.12</version>
     <title>Microsoft.Ambrosia.LibCS</title>
     <authors>Microsoft</authors>
     <owners>Microsoft</owners>
     <projectUrl>https://github.com/Microsoft/AMBROSIA</projectUrl>
-	  <licenseUrl>https://github.com/Microsoft/AMBROSIA/blob/master/LICENSE</licenseUrl>
+    <license type="expression">MIT</license>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>The Microsoft.AmbrosiaLibCS Binary Distribution</description>
     <releaseNotes>None yet</releaseNotes>
