--- a/Ambrosia/Ambrosia/Ambrosia.csproj
+++ b/Ambrosia/Ambrosia/Ambrosia.csproj
@@ -36,8 +36,8 @@
     <PackageReference Include="WindowsAzure.Storage">
       <Version>9.3.3</Version>
     </PackageReference>
-    <PackageReference Include="CRA">
-      <Version>2019.6.17.4</Version>
+    <PackageReference Include="Microsoft.CRA">
+      <Version>2019.8.8.2</Version>
     </PackageReference>
   </ItemGroup>
 
