--- a/DevTools/UnsafeDeregisterInstance/UnsafeDeregisterInstance.csproj
+++ b/DevTools/UnsafeDeregisterInstance/UnsafeDeregisterInstance.csproj
@@ -31,7 +31,7 @@
     <PackageReference Include="WindowsAzure.Storage">
       <Version>9.3.3</Version>
     </PackageReference>
-    <PackageReference Include="CRA" Version="2019.6.17.4" />
+    <PackageReference Include="Microsoft.CRA" Version="2019.8.8.2" />
   </ItemGroup>
   <ItemGroup Condition="'$(TargetFramework)' == 'netcoreapp2.0'">
     <PackageReference Include="System.CodeDom">
