--- a/InternalImmortals/PerformanceTestInterruptible/Client/Job.csproj
+++ b/InternalImmortals/PerformanceTestInterruptible/Client/Job.csproj
@@ -18,7 +18,7 @@
     <DefineConstants>NETCORE</DefineConstants>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CRA" Version="2019.6.17.4" />
+    <PackageReference Include="Microsoft.CRA" Version="2019.8.8.2" />
     <PackageReference Include="Microsoft.CodeAnalysis.Scripting" Version="2.7.0" />
     <PackageReference Include="Microsoft.VisualStudio.Threading" Version="15.8.168" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
