--- a/Clients/CSharp/AmbrosiaLibCS/AmbrosiaLibCS.csproj
+++ b/Clients/CSharp/AmbrosiaLibCS/AmbrosiaLibCS.csproj
@@ -12,6 +12,7 @@
     <StartupObject />
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>../../../Ambrosia/Ambrosia.snk</AssemblyOriginatorKeyFile>
+	<Platforms>x64;AnyCPU</Platforms>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
