--- a/ImmortalCoordinator/ImmortalCoordinator.csproj
+++ b/ImmortalCoordinator/ImmortalCoordinator.csproj
@@ -15,7 +15,7 @@
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|AnyCPU'">
-		<TargetFrameworks>netstandard2.0</TargetFrameworks>
+		<TargetFrameworks>net461;netcoreapp3.1;netstandard2.0</TargetFrameworks>
 		<DebugSymbols>true</DebugSymbols>
 		<OutputPath>bin\Debug\</OutputPath>
 		<DefineConstants>DEBUG;TRACE;NETFX_CORE;WINDOWS</DefineConstants>
@@ -24,7 +24,7 @@
 		<Prefer32Bit>true</Prefer32Bit>
 	</PropertyGroup>
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|AnyCPU'">
-		<TargetFrameworks>netstandard2.0</TargetFrameworks>
+		<TargetFrameworks>net461;netcoreapp3.1;netstandard2.0</TargetFrameworks>
 		<OutputPath>bin\Release\</OutputPath>
 		<DefineConstants>TRACE;NETFX_CORE;WINDOWS</DefineConstants>
 		<Optimize>true</Optimize>
